Fixed overflow last time

--- a/styles.css
+++ b/styles.css
@@ -193,7 +193,7 @@ span{
     font-size: 1.5rem;
 }
 .hide-mobile-nav {
-    right: -100% !important;
+    right: -150% !important;
 }
 /* __Main__ */
 
